# ImageProcessingOpenCV

./: 5MCST.code-workspace  Dockerfile  ImageProcessingOpenCV.code-workspace  README.md  README.md.backup  cmake_example.code-workspace
.ssh/: id_ed25519  id_ed25519.pub  known_hosts  known_hosts.old
0_5MCST/build_debug/: CMakeCache.txt
0_5MCST/build_rapidjson/: CMakeCache.txt  DartConfiguration.tcl
0_CMakeOfficalTutorial/Step1/: CMakeLists.txt
1helloworldCPPtest/: CMakeLists.txt
2opencvCPPtest/: Makefile  OpencvTest.cpp
3qtCreatorCPPTest/: CMakeLists.txt  README.md  main.cpp
3qtCreatorCPPTest/build-qtCreatorCPPTest-Desktop-Debug/: CMakeCache.txt.prev  Makefile  cmake_install.cmake  qtCreatorCPPTest
3qtCreatorCPPTest/build-qtCreatorCPPTest-Desktop-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-765086193879bf8112dc.json  codemodel-v2-3c5325c0d577031caaf6.json  index-2022-11-02T08-22-02-0937.json  target-qtCreatorCPPTest-Debug-00b3e3130720abc51372.json
3qtCreatorCPPTest/build-qtCreatorCPPTest-Desktop-Debug/.cmake/api/v1/reply.prev/: cache-v2-c71c22f64788add0f768.json  codemodel-v2-e54cfdc29be424e2922b.json  index-2022-11-02T08-20-20-0418.json  target-qtCreatorCPPTest-Debug-b4fbb32fe589cc3600e5.json
3qtCreatorCPPTest/include/: dog.h
3qtCreatorCPPTest/qtCreatorCPPTest/: CMakeLists.txt
3qtCreatorCPPTest/qtCreatorCPPTest/src/: dog.cpp
4CMakeAndTestCPP/: CMakeLists.txt  README.md  main.cpp
helloworldCPPtest/: helloworld
opencvAlgo/: CMakeLists.txt  README.md
opencvCPPtest/: CMakeCache.txt  CMakeLists.txt  OpencvTest  cmake_install.cmake
(+175 files in other folders)
